test/sema/s22/fail_width_mismatch.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// test/sema/s22/fail_width_mismatch.nsl — S22 (lang.ebnf:931) fail
// variant. The return-expression's width must match the func's
// return-value-terminal width.
//
// Frozen diagnostic per `contracts/diagnostic-string.contract.md`
// (the `<N>` and `<M>` are integer literals):
//   return-expression width <N> does not match func's return-value-terminal width <M> (S22)
//
// **Phase 4a TDD red state**: no S22 checker exists; FAILS until
// Phase 4b T060.

// RUN: not %nslc -emit=ast %s 2>&1 | FileCheck %s

declare d {
  output ret_terminal[8];
  func_in compute() : ret_terminal;
}
module m_fail {
  func compute {
    return 0;
  }
}

// CHECK: error: return-expression width {{[0-9]+}} does not match func's return-value-terminal width {{[0-9]+}} (S22)
